# torque2026-ahmed-mujtaba-et-al

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
img/: support-images.xlsx
notebooks/: 1.0.torque-2026.ipynb  Effect of as_built_dimensions-Torque2026.ipynb
scripts/: main.py
src/owilab_torque2026/: __init__.py  __main__.py  fatigue.py  geometry.py  plot.py  stress_factors.py
